@@ -1,3 +1,12 @@
+2008-06-20  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
+
+        Reviewed by Oliver.
+
+        Remove unused destructors.
+
+        * kjs/nodes.cpp:
+        * kjs/nodes.h:
+
 2008-06-20  Timothy Hatcher  <timothy@apple.com>
 
         Fixed an ASSERT(m_actualSelfTime <= m_actualTotalTime) when starting
